Für BlackSkyStudios geupdated

--- a/app/src/main/res/layout/tab2_layout.xml
+++ b/app/src/main/res/layout/tab2_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    tools:context="com.riftgames.soundboardtsmmyth.MainActivity"
+    tools:context="com.blackskystudios.soundboardtsmmyth.MainActivity"
     android:id="@+id/sprueche">
 
 
